--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,25 @@ main {
   height: 100%;
 }
 
+.renderer-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.renderer-container canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.renderer-fallback {
+  padding: 1.5rem;
+  text-align: center;
+  color: #f0e6d2;
+  font-size: 1.05rem;
+}
+
 #overlay-info {
   position: absolute;
   top: 0;
